Fix overlap between preview button and edit switcher
These buttons can appear in any order depending on when
the code loads. Remove the default OOUI button negative
margin.

Replace group padding with margin now there is no negative
margin on the buttons.

--- a/modules/realtimepreview/RealtimePreview.less
+++ b/modules/realtimepreview/RealtimePreview.less
@@ -1,11 +1,17 @@
 @import 'mediawiki.skin.variables.less';
 
-.ext-WikiEditor-realtimepreview-button:hover {
-	background-color: @background-color-interactive;
-}
+.ext-WikiEditor-realtimepreview-button {
+	&:hover {
+		background-color: @background-color-interactive;
+	}
 
-.ext-WikiEditor-realtimepreview-button.oo-ui-toggleWidget-on .oo-ui-labelElement-label {
-	color: @color-progressive;
+	&.oo-ui-toggleWidget-on .oo-ui-labelElement-label {
+		color: @color-progressive;
+	}
+
+	&.oo-ui-buttonElement-frameless.oo-ui-labelElement.oo-ui-iconElement:first-child {
+		margin-left: 0;
+	}
 }
 
 /* stylelint-disable selector-max-id */
